refactor: toList()를 사용하도록 변경 (#151) (#152)
* refactor: toList()를 사용하도록 변경 (#151)

* chore: 불필요한 개행 제거 (#151)

* chore: 불필요한 import 제거 (#151)